5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1756_1580.log
== TEST (2019-05-27 19:51:38) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
if(v1[i] == -1):
faltosos = faltosos + 1
elif(v1[i] >= 6):
aprovados = aprovados + 1
s = s + v1[i]
elif(v1[i] < 6 and v1[i] >= 0):
reprovados = reprovados + 1
s = s + v1[i]

if(maior == v1[i]):
aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
File "XXXX", line 15
    if(v1[i] == -1):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:51:49) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
if(v1[i] == -1):
faltosos = faltosos + 1
elif(v1[i] >= 6):
aprovados = aprovados + 1
s = s + v1[i]
elif(v1[i] < 6 and v1[i] >= 0):
reprovados = reprovados + 1
s = s + v1[i]

if(maior == v1[i]):
aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- EXECUTION TIME:
0.152678
-- ERROR:
  File "/home/codebench/codes/1756/1580/main.py", line 15
    if(v1[i] == -1):
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:53:45) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
if(v1[i] == -1):
faltosos = faltosos + 1
elif(v1[i] >= 6):
aprovados = aprovados + 1
s = s + v1[i]
elif(v1[i] < 6 and v1[i] >= 0):
reprovados = reprovados + 1
s = s + v1[i]

if(maior == v1[i]):
aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
File "XXXX", line 15
    if(v1[i] == -1):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:54:35) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
	faltosos = faltosos + 1
	elif(v1[i] >= 6):
	aprovados = aprovados + 1
	s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
	reprovados = reprovados + 1
	s = s + v1[i]

if(maior == v1[i]):
aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
File "XXXX", line 16
    faltosos = faltosos + 1
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:55:22) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

if(maior == v1[i]):
aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
File "XXXX", line 25
    aluno = "" + v2[i]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:55:41) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:57:38) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:25:45) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:29:29) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
	s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
	s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
File "XXXX", line 20
    elif(v1[i] < 6 and v1[i] >= 0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:53:01) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- EXECUTION TIME:
1016.75
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:55:33) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- EXECUTION TIME:
1665.15
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:55:33) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

	if(maior == v1[i]):
		aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- EXECUTION TIME:
1633.73
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:55:33) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
	s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- EXECUTION TIME:
1594.42
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:55:33) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
	s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- EXECUTION TIME:
1312.87
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:

-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 21:22:46) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
	s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 21:41:01) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
	s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- EXECUTION TIME:
439.496
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:16:38) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
	s = s + v1[i]

if(maior == v1[i]):
	aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:09) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
if(v1[i] == -1):
	faltosos = faltosos + 1
elif(v1[i] >= 6):
	aprovados = aprovados + 1
	s = s + v1[i]
elif(v1[i] < 6 and v1[i] >= 0):
	reprovados = reprovados + 1
s = s + v1[i]

if(maior == v1[i]):
aluno = "" + v2[i]

i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
File "XXXX", line 15
    if(v1[i] == -1):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:42:04) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

	if(maior == v1[i]):
		aluno = "" + v2[i]
	
	i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:42:51) 
-- CODE:
from numpy import*

v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(v1)

while(i < size(v1)):
	if(v1[i] == -1):
		faltosos = faltosos + 1
	elif(v1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]

	if(maior == v1[i]):
		aluno = "" + v2[i]
	
	i = i + 1

print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
-- EXECUTION TIME:
0.447152
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
